--- a/src/main/resources/generator/generator.properties
+++ b/src/main/resources/generator/generator.properties
@@ -1,4 +1,4 @@
-jdbc.driverLocation=C:\\Users\\Administrator\\.m2\\repository\\mysql\\mysql-connector-java\\5.1.30\\mysql-connector-java-5.1.30.jar
+jdbc.driverLocation=C:\\Users\\chwangteng\\.m2\\repository\\mysql\\mysql-connector-java\\5.1.30\\mysql-connector-java-5.1.30.jar
 jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.connectionURL=jdbc:mysql://127.0.0.1:3306/report
 jdbc.userId=root
